<?xml version="1.0" encoding="utf-8"?>
<!-- Wildan Permana - 10121075 -->
<!-- PemAndro3 - 20 Juni 2024 -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <androidx.cardview.widget.CardView
        android:id="@+id/cd_pop"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="25dp">
        <ImageView
            android:id="@+id/img_pop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/success_1"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"/>
        <TextView
            android:id="@+id/txt_pop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/berhasil_mendapatkan_akses"
            android:layout_gravity="center"
            android:textSize="24dp"
            android:layout_marginTop="50dp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lapor"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginTop="90dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"/>
        <Button
            android:id="@+id/btn_ok"
            android:layout_width="355dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/hijau"
            android:text="@string/oke"
            android:layout_marginTop="140dp"/>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>